--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-webp": "^4.0.1",
     "postcss": "^8.3.11",
     "postcss-bem-linter": "^3.3.0",
+    "postcss-csso": "^5.0.1",
     "postcss-reporter": "^7.0.4",
     "prettier": "^2.4.1",
     "sass": "^1.43.4",
