--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "sass": "^1.43.4",
     "stylelint": "^14.1.0",
     "stylelint-config-recess-order": "^3.0.0",
-    "stylelint-config-standard": "^24.0.0"
+    "stylelint-config-standard": "^24.0.0",
+    "webpack": "^5.64.4",
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
     "@babel/preset-env": "^7.16.0"
